updated github username

--- a/404.html
+++ b/404.html
@@ -46,14 +46,14 @@
     <div class="container col-xxl-8 px-4 py-5" style="margin-top: 20vh; margin-bottom: 20vh;">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-                <img src="https://bibek10550.github.io/kiitcse/assets\image\404_error.gif" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="700" loading="lazy">
+                <img src="https://bibekchandsah.github.io/kiitcse/assets\image\404_error.gif" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="700" loading="lazy">
             </div>
             <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Oops, nothing here.....</h1>
                 <p class="lead">Uh oh, we-can't seent to find the page you're looking for, Try going back to previous page or home page</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start dropdown-menu border-0" style="background-color: transparent;">
                     <a class="goback" href="#"><button class="btn btn-lg btn-outline-primary rounded-pill px-5" type="button" onclick="goBack()">Go back</button></a>
-                    <a class="indexPage" href="https://bibek10550.github.io/bibek10550"><button class="btn btn-lg btn-outline-primary rounded-pill px-5" type="button">Home Page</button></a>
+                    <a class="indexPage" href="https://bibekchandsah.github.io/bibekchandsah"><button class="btn btn-lg btn-outline-primary rounded-pill px-5" type="button">Home Page</button></a>
                 </div>
             </div>
         </div>
