--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
     <meta name="theme-color" content="#2218a7">
     <!-- Provide a brief description of your page -->
     <meta name="description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="search.description" content="bibekchandsah bcs bibek10550 bibeksha10550 web-development front-end development" />
+    <meta name="search.description" content="bibekchandsah bcs bibekchandsah bibeksha web-development front-end development" />
     <!-- Specify keywords related to your content -->
-    <meta name="keywords" content="bibek sha, bibek10550, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
+    <meta name="keywords" content="bibek sha, bibekchandsah, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
     <!-- Define the author of the page -->
     <meta name="author" content="Bibek Chand Sha">
     <!-- Define the language of the content -->
     <meta name="language" content="en">
     <!-- Canonical URL to specify the preferred version of the page -->
-    <link rel="canonical" href="https://bibek10550.github.io/bibek10550">
+    <link rel="canonical" href="https://bibekchandsah.github.io/bibekchandsah">
     <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="BibekChandSah (BCS)">
     <meta property="og:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta property="og:image" content="https://bibek10550.github.io/bibek10550/assets/images/BCS_Full_Share.png">
-    <meta property="og:url" content="https://bibek10550.github.io/bibek10550">
+    <meta property="og:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
+    <meta property="og:url" content="https://bibekchandsah.github.io/bibekchandsah">
     <meta property="og:type" content="website">
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <!--     <meta name="twitter:site" content="@YourTwitterHandle"> Replace with your Twitter handle  -->
     <meta name="twitter:title" content="BibekChandSah (BCS)">
     <meta name="twitter:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="twitter:image" content="https://bibek10550.github.io/bibek10550/assets/images/BCS_Full_Share.png">
+    <meta name="twitter:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -127,7 +127,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/images/bibek10550.png" class="d-block w-100 img-fluid" alt="bibek10550">
+                <img src="assets/images/bibekchandsah.png" class="d-block w-100 img-fluid" alt="bibekchandsah">
                 <!-- <img src="https://source.unsplash.com/500x200/?technologies,code,laptop,artificial,intelligence,robot" class="d-block w-100 img-fluid" alt="..."> -->
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Third slide label</h5>
@@ -137,14 +137,14 @@
             <div class="carousel-item">
                 <img src="assets/images/KIIT_CSE.png" class="d-block w-100 img-fluid" alt="KIIT CSE">
                 <div class="carousel-caption d-none d-md-block">
-                    <!-- <h5><a href="https://bibek10550.github.io/kiitcse" class="text-white">KIIT CSE</a></h5>
+                    <!-- <h5><a href="https://bibekchandsah.github.io/kiitcse" class="text-white">KIIT CSE</a></h5>
                     <p>This resource hub simplifies your educational journey in Computer Science and Engineering (CSE).</p> -->
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="assets/images/Homepage.png" class="d-block w-100 img-fluid" alt="Homepage">
                 <div class="carousel-caption d-none d-md-block text-black">
-                    <!-- <h5><a href="https://bibek10550.github.io/Homepage" class="text-black">Homepage</a></h5>
+                    <!-- <h5><a href="https://bibekchandsah.github.io/Homepage" class="text-black">Homepage</a></h5>
                     <p>This homepage is designed to suit your preferences and needs. It offers many features and useful items that you use every day. You can easily customize it to make it your own.</p> -->
                 </div>
             </div>
@@ -165,7 +165,7 @@
                 <img src="assets/images/BCS_Full.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="700" loading="lazy">
             </div>
             <div class="col-lg-6">
-                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Myself <a href="https://bibek10550.github.io/bibek" target="_blank">Bibek</a> Welcome you all to BCS</h1>
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Myself <a href="https://bibekchandsah.github.io/bibek" target="_blank">Bibek</a> Welcome you all to BCS</h1>
                 <p class="lead">your go-to destination for all things related to web development! I am a dedicated and passionate about sharing my knowledge and expertise with the world.</p>
                 <p class="lead">I am excited to be a part of your coding journey! Now, let's explore BCS together!</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start dropdown-menu border-0" style="background-color: transparent;">
@@ -183,11 +183,11 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4 projectImage">
-                        <img src="https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
+                        <img src="https://bibekchandsah.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
+                            <h5 class="card-title fw-bold"><a href="https://bibekchandsah.github.io/kiitcse">KIIT CSE</a></h5>
                             <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
                         </div>
                     </div>
@@ -204,11 +204,11 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4 projectImage">
-                        <img src="https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
+                        <img src="https://bibekchandsah.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png" class="img-fluid rounded-start" alt="KIIT CSE">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold"><a href="https://bibek10550.github.io/kiitcse">KIIT CSE</a></h5>
+                            <h5 class="card-title fw-bold"><a href="https://bibekchandsah.github.io/kiitcse">KIIT CSE</a></h5>
                             <p class="card-text">This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.</p>
                         </div>
                     </div>
