--- a/developer.html
+++ b/developer.html
@@ -17,27 +17,27 @@
     <meta name="theme-color" content="#2218a7">
     <!-- Provide a brief description of your page -->
     <meta name="description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="search.description" content="bibekchandsah bcs bibek10550 bibeksha10550 web-development front-end development" />
+    <meta name="search.description" content="bibekchandsah bcs bibekchandsah bibekchandsha web-development front-end development" />
     <!-- Specify keywords related to your content -->
-    <meta name="keywords" content="bibek sha, bibek10550, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
+    <meta name="keywords" content="bibek sha, bibekchandsah, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
     <!-- Define the author of the page -->
     <meta name="author" content="Bibek Chand Sha">
     <!-- Define the language of the content -->
     <meta name="language" content="en">
     <!-- Canonical URL to specify the preferred version of the page -->
-    <link rel="canonical" href="https://bibek10550.github.io/bibek10550">
+    <link rel="canonical" href="https://bibekchandsah.github.io/bibekchandsah">
     <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="BibekChandSah (BCS)">
     <meta property="og:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta property="og:image" content="https://bibek10550.github.io/bibek10550/assets/images/BCS_Full_Share.png">
-    <meta property="og:url" content="https://bibek10550.github.io/bibek10550">
+    <meta property="og:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
+    <meta property="og:url" content="https://bibekchandsah.github.io/bibekchandsah">
     <meta property="og:type" content="website">
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <!--     <meta name="twitter:site" content="@YourTwitterHandle"> Replace with your Twitter handle  -->
     <meta name="twitter:title" content="BibekChandSah (BCS)">
     <meta name="twitter:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="twitter:image" content="https://bibek10550.github.io/bibek10550/assets/images/BCS_Full_Share.png">
+    <meta name="twitter:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -70,12 +70,12 @@
     <!-- main section -->
     <!-- description -->
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4 img-fluid rounded-circle developerImage" src="https://bibek10550.github.io/kiitcse/assets/image/developer.jpg" alt="" width="300" height="300">
+        <img class="d-block mx-auto mb-4 img-fluid rounded-circle developerImage" src="https://bibekchandsah.github.io/kiitcse/assets/image/developer.jpg" alt="" width="300" height="300">
         <h1 data-aos="zoom-in" class="display-5 fw-bold text-body-emphasis">Bibek Chand Sah</h1>
         <div data-aos="zoom-in" class="col-lg-9 mx-auto">
             <p class="lead mb-4">Namaste! 🙏🏻 I am Bibek from Nepal. Currently, I am pursuing my studies at KIIT University. My educational journey began at Nepal Police School, where I completed my SEE (Secondary Education Examination), and then continued to Prasadi Academy for my +2 (Higher Secondary Education).</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a href="https://bibek10550.github.io/bibek/"><button type="button" class="btn btn-outline-primary btn-lg px-4 gap-3">Bibek</button></a>
+                <a href="https://bibekchandsah.github.io/bibek/"><button type="button" class="btn btn-outline-primary btn-lg px-4 gap-3">Bibek</button></a>
             </div>
         </div>
     </div>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg rounded-3">
-                <img class="rounded-lg-3 rounded-3" src="https://bibek10550.github.io/kiitcse/assets\image\thinking.jpeg" alt="logo" width="720">
+                <img class="rounded-lg-3 rounded-3" src="https://bibekchandsah.github.io/kiitcse/assets\image\thinking.jpeg" alt="logo" width="720">
             </div>
         </div>
     </div>
@@ -106,7 +106,7 @@
                 <!--add more items 👇🏻 -->
                 <!-- <div class="col-lg-auto swiper-slide">
                     <div class="card testimonial">
-                        <img src="https://bibek10550.github.io/kiitcse/assets/image/developer.jpg" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="Bibek Chand Sah.">
+                        <img src="https://bibekchandsah.github.io/kiitcse/assets/image/developer.jpg" class="rounded-circle me-1 mt-4" width="100" height="100" class="card-img-top" alt="Bibek Chand Sah.">
                         <div class="card-body">
                             <h5 class="card-title text-center fw-bolder">Bibek Chand Sah</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -126,11 +126,11 @@
     <h3 class="text-center">Some Useful Links</h3>
     <hr>
     <div data-aos="fade-up" class="d-flex gap-2 justify-content-center py-2 mb-lg-5 toolBadge ">
-        <a href="https://bibek10550.github.io/Music" title="Music"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/Music/favicon_io/apple-touch-icon.png" alt="Music logo">Music </span></a>
-        <a href="https://bibek10550.github.io/event-calendar/" title="Calendar"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/event-calendar/favicon_io/apple-touch-icon.png" alt="Calendar logo">Calendar </span></a>
-        <a href="https://bibek10550.github.io/dailyQuote/" title="Daily Quote"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/dailyQuote/favicon_io/apple-touch-icon.png" alt="Daily Quote logo">Daily Quote </span></a>
-        <a href="https://bibek10550.github.io/Homepage/" title="Homepage"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/Homepage/favicon_io/apple-touch-icon.png" alt="Homepage logo">Homepage </span></a>
-        <a href="https://bibek10550.github.io/linksaver/" title="Link Saver"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibek10550.github.io/linksaver/apple-touch-icon.png" alt="Homepage logo">Link Saver </span></a>
+        <a href="https://bibekchandsah.github.io/Music" title="Music"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibekchandsah.github.io/Music/favicon_io/apple-touch-icon.png" alt="Music logo">Music </span></a>
+        <a href="https://bibekchandsah.github.io/event-calendar/" title="Calendar"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibekchandsah.github.io/event-calendar/favicon_io/apple-touch-icon.png" alt="Calendar logo">Calendar </span></a>
+        <a href="https://bibekchandsah.github.io/dailyQuote/" title="Daily Quote"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibekchandsah.github.io/dailyQuote/favicon_io/apple-touch-icon.png" alt="Daily Quote logo">Daily Quote </span></a>
+        <a href="https://bibekchandsah.github.io/Homepage/" title="Homepage"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibekchandsah.github.io/Homepage/favicon_io/apple-touch-icon.png" alt="Homepage logo">Homepage </span></a>
+        <a href="https://bibekchandsah.github.io/linksaver/" title="Link Saver"><span class="badge d-flex align-items-center p-lg-2 pe-lg-4 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill"><img class="rounded-circle me-1" width="24" height="24" src="https://bibekchandsah.github.io/linksaver/apple-touch-icon.png" alt="Homepage logo">Link Saver </span></a>
     </div>
     <!-- online status toast -->
     <div class="onlineStatusToast">
