--- a/feedback.html
+++ b/feedback.html
@@ -17,27 +17,27 @@
     <meta name="theme-color" content="#2218a7">
     <!-- Provide a brief description of your page -->
     <meta name="description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="search.description" content="bibekchandsah bcs bibek10550 bibeksha10550 web-development front-end development" />
+    <meta name="search.description" content="bibekchandsah bcs bibekchandsah bibeksha web-development front-end development" />
     <!-- Specify keywords related to your content -->
-    <meta name="keywords" content="bibek sha, bibek10550, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
+    <meta name="keywords" content="bibek sha, bibekchandsah, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
     <!-- Define the author of the page -->
     <meta name="author" content="Bibek Chand Sha">
     <!-- Define the language of the content -->
     <meta name="language" content="en">
     <!-- Canonical URL to specify the preferred version of the page -->
-    <link rel="canonical" href="https://bibek10550.github.io/bibek10550">
+    <link rel="canonical" href="https://bibekchandsah.github.io/bibekchandsah">
     <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="BibekChandSah (BCS)">
     <meta property="og:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta property="og:image" content="https://bibek10550.github.io/bibek10550/assets/images/BCS_Full_Share.png">
-    <meta property="og:url" content="https://bibek10550.github.io/bibek10550">
+    <meta property="og:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
+    <meta property="og:url" content="https://bibekchandsah.github.io/bibekchandsah">
     <meta property="og:type" content="website">
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <!--     <meta name="twitter:site" content="@YourTwitterHandle"> Replace with your Twitter handle  -->
     <meta name="twitter:title" content="BibekChandSah (BCS)">
     <meta name="twitter:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="twitter:image" content="https://bibek10550.github.io/bibek10550/assets/images/BCS_Full_Share.png">
+    <meta name="twitter:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -96,7 +96,7 @@
                             <label for="exampleFormControlTextarea1" class="form-label">Write your message</label>
                             <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="3" required=""></textarea>
                         </div>
-                        <input type="hidden" name="_next" value="https://bibek10550.github.io/kiitcse/thankyou.html">
+                        <input type="hidden" name="_next" value="https://bibekchandsah.github.io/kiitcse/thankyou.html">
                 </form>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4 mb-lg-3 pb-lg-5">
                     <button type="submit" class="btn btn-outline-primary btn-lg px-4">Submit</button>
