--- a/javascript.html
+++ b/javascript.html
@@ -17,27 +17,27 @@
     <meta name="theme-color" content="#2218a7">
     <!-- Provide a brief description of your page -->
     <meta name="description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="search.description" content="bibekchandsah bcs bibek10550 bibeksha10550 web-development front-end development" />
+    <meta name="search.description" content="bibekchandsah bcs bibekchandsah bibeksha web-development front-end development" />
     <!-- Specify keywords related to your content -->
-    <meta name="keywords" content="bibek sha, bibek10550, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
+    <meta name="keywords" content="bibek sha, bibekchandsah, bibekchandsah, web-development, resources, bibeksha10550 bibekchandsah">
     <!-- Define the author of the page -->
     <meta name="author" content="Bibek Chand Sha">
     <!-- Define the language of the content -->
     <meta name="language" content="en">
     <!-- Canonical URL to specify the preferred version of the page -->
-    <link rel="canonical" href="https://bibek10550.github.io/bibek10550">
+    <link rel="canonical" href="https://bibekchandsah.github.io/bibekchandsah">
     <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="BibekChandSah (BCS)">
     <meta property="og:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta property="og:image" content="https://bibek10550.github.io/bibek10550/assets/images/BCS_Full_Share.png">
-    <meta property="og:url" content="https://bibek10550.github.io/bibek10550">
+    <meta property="og:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
+    <meta property="og:url" content="https://bibekchandsah.github.io/bibekchandsah">
     <meta property="og:type" content="website">
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <!--     <meta name="twitter:site" content="@YourTwitterHandle"> Replace with your Twitter handle  -->
     <meta name="twitter:title" content="BibekChandSah (BCS)">
     <meta name="twitter:description" content="Your go-to destination for all things related to web development! and many other things. At bibekchandsah.com.np, we believe in the power of quality resources to enhance your coding skills. That's why we offer all our content free of charge, ensuring that everyone has access to the tools they need to succeed.">
-    <meta name="twitter:image" content="https://bibek10550.github.io/bibek10550/assets/images/BCS_Full_Share.png">
+    <meta name="twitter:image" content="https://bibekchandsah.github.io/bibekchandsah/assets/images/BCS_Full_Share.png">
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -145,27 +145,27 @@
             // project data filter , project name, project link, project image link, project description
             // Website Designs  -   Navigation_Bars  -   Card_Designs   -   CSS_Effect  -   JavaScript_Functionality    -   Glowing_Effects     -       Extension   -     Form      -      Portfolio    -   Education   -   3D-effects
 
-            "Navigation_Bars", "sticky-nav-bar", "https://github.com/bibek10550/sticky-nav-bar", "assets/images/projects/sticky-nav-bar.png", "Improve website navigation and user experience with sticky-nav-bar, a fixed navigation menu that remains visible and accessible as users scroll through the page.",
-            "Navigation_Bars", "responsive-nav-bar", "https://github.com/bibek10550/responsive-nav-bar", "assets/images/projects/responsive-nav-bar.png", "Ensure seamless navigation on all devices with responsive-nav-bar, an adaptive navigation menu that adjusts its layout and functionality based on screen size.",
-            "Navigation_Bars", "double-nav-bar", "https://github.com/bibek10550/double-nav-bar", "assets/images/projects/double-nav-bar.png", "Enhance website navigation and organization with double-nav-bar, featuring two levels of navigation menus for improved accessibility and user experience.",
-            "Navigation_Bars", "double-nav-barr", "https://github.com/bibek10550/double-nav-barr", "assets/images/projects/double-nav-barr.png", "Improve website navigation and organization with double-nav-barr, featuring two levels of navigation menus for improved accessibility and user experience.",
-            "Navigation_Bars", "responsive-signup-nav-bar", "https://github.com/bibek10550/responsive-signup-nav-bar", "assets/images/projects/responsive-signup-nav-bar.png", "Enhance user experience and registration process with responsive-signup-nav-bar, offering a streamlined and user-friendly navigation menu for signup and login forms.",
-            "Navigation_Bars", "slide-show-with-nav-indicator", "https://github.com/bibek10550/slide-show-with-nav-indicator", "assets/images/projects/slide-show-with-nav-indicator.png", "Create engaging and interactive slideshow presentations with slide-show-with-nav-indicator, featuring intuitive navigation indicators for easy slide navigation.",
+            "Navigation_Bars", "sticky-nav-bar", "https://github.com/bibekchandsah/sticky-nav-bar", "assets/images/projects/sticky-nav-bar.png", "Improve website navigation and user experience with sticky-nav-bar, a fixed navigation menu that remains visible and accessible as users scroll through the page.",
+            "Navigation_Bars", "responsive-nav-bar", "https://github.com/bibekchandsah/responsive-nav-bar", "assets/images/projects/responsive-nav-bar.png", "Ensure seamless navigation on all devices with responsive-nav-bar, an adaptive navigation menu that adjusts its layout and functionality based on screen size.",
+            "Navigation_Bars", "double-nav-bar", "https://github.com/bibekchandsah/double-nav-bar", "assets/images/projects/double-nav-bar.png", "Enhance website navigation and organization with double-nav-bar, featuring two levels of navigation menus for improved accessibility and user experience.",
+            "Navigation_Bars", "double-nav-barr", "https://github.com/bibekchandsah/double-nav-barr", "assets/images/projects/double-nav-barr.png", "Improve website navigation and organization with double-nav-barr, featuring two levels of navigation menus for improved accessibility and user experience.",
+            "Navigation_Bars", "responsive-signup-nav-bar", "https://github.com/bibekchandsah/responsive-signup-nav-bar", "assets/images/projects/responsive-signup-nav-bar.png", "Enhance user experience and registration process with responsive-signup-nav-bar, offering a streamlined and user-friendly navigation menu for signup and login forms.",
+            "Navigation_Bars", "slide-show-with-nav-indicator", "https://github.com/bibekchandsah/slide-show-with-nav-indicator", "assets/images/projects/slide-show-with-nav-indicator.png", "Create engaging and interactive slideshow presentations with slide-show-with-nav-indicator, featuring intuitive navigation indicators for easy slide navigation.",
 
-            "CSS_Effect", "small-piece-of-paper-falling-down", "https://github.com/bibek10550/small-piece-of-paper-falling-down", "assets/images/projects/small-piece-of-paper-falling-down.png", "Add a touch of realism to your website with small-piece-of-paper-falling-down, featuring a subtle animation effect of paper falling down.",
+            "CSS_Effect", "small-piece-of-paper-falling-down", "https://github.com/bibekchandsah/small-piece-of-paper-falling-down", "assets/images/projects/small-piece-of-paper-falling-down.png", "Add a touch of realism to your website with small-piece-of-paper-falling-down, featuring a subtle animation effect of paper falling down.",
 
-            "JavaScript_Functionality", "chat-bot", "https://github.com/bibek10550/chat-bot", "assets/images/projects/chat-bot.png", "Enhance user engagement and provide instant support with chat-bot, a friendly and conversational chatbot designed to assist users and answer common questions.",
-            "JavaScript_Functionality", "pop-up-email", "https://github.com/bibek10550/pop-up-email", "assets/images/projects/pop-up-email.png", "Engage users and encourage sharing with pop-up-email, a sleek and user-friendly email subscription pop-up widget for your website.",
-            "JavaScript_Functionality", "pop-up-after-load-page", "https://github.com/bibek10550/pop-up-after-load-page", "assets/images/projects/pop-up-after-load-page.png", "Engage users with relevant content and offers using pop-up-after-load-page, a customizable pop-up feature that appears after the page finishes loading.",
-            "JavaScript_Functionality", "working-google-search-engine", "https://github.com/bibek10550/working-google-search-engine", "assets/images/projects/working-google-search-engine.png", "Create a fully functional search engine with working-google-search-engine, featuring customizable search parameters and filters for delivering accurate search results.",
-            "JavaScript_Functionality", "qr-code-reader-or-scanner", "https://github.com/bibek10550/qr-code-reader-or-scanner", "assets/images/projects/qr-code-reader-or-scanner.png", "Scan and decode QR codes with qr-code-reader-or-scanner, a lightweight and user-friendly QR code reader application for mobile and desktop devices.",
+            "JavaScript_Functionality", "chat-bot", "https://github.com/bibekchandsah/chat-bot", "assets/images/projects/chat-bot.png", "Enhance user engagement and provide instant support with chat-bot, a friendly and conversational chatbot designed to assist users and answer common questions.",
+            "JavaScript_Functionality", "pop-up-email", "https://github.com/bibekchandsah/pop-up-email", "assets/images/projects/pop-up-email.png", "Engage users and encourage sharing with pop-up-email, a sleek and user-friendly email subscription pop-up widget for your website.",
+            "JavaScript_Functionality", "pop-up-after-load-page", "https://github.com/bibekchandsah/pop-up-after-load-page", "assets/images/projects/pop-up-after-load-page.png", "Engage users with relevant content and offers using pop-up-after-load-page, a customizable pop-up feature that appears after the page finishes loading.",
+            "JavaScript_Functionality", "working-google-search-engine", "https://github.com/bibekchandsah/working-google-search-engine", "assets/images/projects/working-google-search-engine.png", "Create a fully functional search engine with working-google-search-engine, featuring customizable search parameters and filters for delivering accurate search results.",
+            "JavaScript_Functionality", "qr-code-reader-or-scanner", "https://github.com/bibekchandsah/qr-code-reader-or-scanner", "assets/images/projects/qr-code-reader-or-scanner.png", "Scan and decode QR codes with qr-code-reader-or-scanner, a lightweight and user-friendly QR code reader application for mobile and desktop devices.",
 
-            "Extension", "showTime", "https://github.com/bibek10550/showTime", "assets/images/projects/showTime.png", "Experience sleek and modern design with showTime, Shows the current time so that you don't need to look clock manually.",
-            "Extension", "linksaver", "https://github.com/bibek10550/linksaver", "assets/images/projects/linksaver.png", "Easily save and organize your favorite links and resources with linksaver, a bookmarking tool designed to simplify the process of managing and accessing saved links.",
-            "Extension", "pickupline", "https://github.com/bibek10550/pickupline", "assets/images/projects/pickupline.png", "Add a touch of humor and charm to your conversations with pickupline, a collection of funny and clever pickup lines to break the ice and spark conversations.",
-            "Extension", "GoogleFormHelper", "https://github.com/bibek10550/GoogleFormHelper", "assets/images/projects/GoogleFormHelper.png", "It is able to provide the answer automatically and also selects the best answer automatically.",
-            "Extension", "youtube-resume-button", "https://github.com/bibek10550/youtube-resume-button", "assets/images/projects/youtube-resume-button.png", "Enhance user experience and convenience with youtube-resume-button, allowing users to resume videos from where they left off on YouTube by blocking the advertisement.",
-            "Extension", "video-PIP-Instagram", "https://github.com/bibek10550/video-PIP-Instagram", "assets/images/projects/video-PIP-Instagram.png", "Enjoy seamless multitasking with video-PIP-Instagram, enabling picture-in-picture mode for Instagram videos call while browsing through the page.",
+            "Extension", "showTime", "https://github.com/bibekchandsah/showTime", "assets/images/projects/showTime.png", "Experience sleek and modern design with showTime, Shows the current time so that you don't need to look clock manually.",
+            "Extension", "linksaver", "https://github.com/bibekchandsah/linksaver", "assets/images/projects/linksaver.png", "Easily save and organize your favorite links and resources with linksaver, a bookmarking tool designed to simplify the process of managing and accessing saved links.",
+            "Extension", "pickupline", "https://github.com/bibekchandsah/pickupline", "assets/images/projects/pickupline.png", "Add a touch of humor and charm to your conversations with pickupline, a collection of funny and clever pickup lines to break the ice and spark conversations.",
+            "Extension", "GoogleFormHelper", "https://github.com/bibekchandsah/GoogleFormHelper", "assets/images/projects/GoogleFormHelper.png", "It is able to provide the answer automatically and also selects the best answer automatically.",
+            "Extension", "youtube-resume-button", "https://github.com/bibekchandsah/youtube-resume-button", "assets/images/projects/youtube-resume-button.png", "Enhance user experience and convenience with youtube-resume-button, allowing users to resume videos from where they left off on YouTube by blocking the advertisement.",
+            "Extension", "video-PIP-Instagram", "https://github.com/bibekchandsah/video-PIP-Instagram", "assets/images/projects/video-PIP-Instagram.png", "Enjoy seamless multitasking with video-PIP-Instagram, enabling picture-in-picture mode for Instagram videos call while browsing through the page.",
 
 
 
